--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
         </style>
 
         <style>
-        #map {
-            width: 1522px;
-            height: 844px;
+        html, body, #map {
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            margin: 0;
         }
         </style>
         <title></title>
