--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <script src="resources/ol3-search-layer.js"></script>
         <script src="./resources/ol-layerswitcher.js"></script>
         <script src="resources/ol-geocoder.js"></script>
-        <script src="layers/Schneeschuhwanderwege_1.js"></script><script src="layers/WinterWeg_2.js"></script><script src="layers/Winterwanderwege_3.js"></script>
-        <script src="styles/Schneeschuhwanderwege_1_style.js"></script><script src="styles/WinterWeg_2_style.js"></script><script src="styles/Winterwanderwege_3_style.js"></script>
+        <script src="layers/Schneeschuhwanderwege_1.js"></script><script src="layers/WinterWeg_2.js"></script><script src="layers/Winterwanderwege_3.js"></script><script src="layers/GemeindenKopie_5.js"></script>
+        <script src="styles/Schneeschuhwanderwege_1_style.js"></script><script src="styles/WinterWeg_2_style.js"></script><script src="styles/Winterwanderwege_3_style.js"></script><script src="styles/GemeindenKopie_5_style.js"></script>
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
